objects/ssot__OfferMarketSegment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceName__c</fullName>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Offer Market Segment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MarketSegmentId__c</fullName>
        <label>Market Segment</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OfferId__c</fullName>
        <label>Offer</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752200974827_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OfferMarketSegment_OfferId_map_Offer_rel</label>
        <referenceTo>ssot__Offer__dlm</referenceTo>
        <relationshipLabel>OfferMarketSegment_OfferId_map_Offer_rel</relationshipLabel>
        <relationshipName>rel_1752200974827_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752201038363_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OfferMarketSegment_MarketSegmentId_m_rel</label>
        <referenceTo>ssot__MarketSegment__dlm</referenceTo>
        <relationshipLabel>OfferMarketSegment_MarketSegmentId_m_rel</relationshipLabel>
        <relationshipName>rel_1752201038363_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>